# storyteller

./: .gitignore  Cargo.toml  README.md  output.md  package.json  pnpm-lock.yaml
context/: party-handbook.md
context/worldbuilding/: awakening-stone-examples.md  essence-examples.md  unsorted-notes.md
data/: game_context_schema.json
node-client-old/: package.json  pnpm-lock.yaml
node-client-old/src/: index.css
node-client-old/src/lib/: game.ts  story-segment.tsx  theme.ts
node-client-old/src/ui/: choices.tsx
prompts/: create-sidequest.md  create_an_essence.md  introduce-sidequest.md
server/: db.ts  package.json  pnpm-lock.yaml  server.ts
server/services/: openaiService.ts
skills/: create-essence.py  join.py  narrate.py  print.py
src/: app.rs  cursor.rs  game.rs  input.rs  main.rs  main2.rs  save.rs  static_data.rs  ui.rs
src/client/: package.json  pnpm-lock.yaml
src/client/src/: App.tsx  index.css
src/client/src/lib/: choice.tsx  store.ts  story-segment.tsx
src/client/src/ui/: choice.tsx  (+1 more)
src/context/: background.md  choice_set.md  party-handbook.md  sidequest-handbook.md
src/prompts/: create-sidequest.md  decision-point.md
src/rust-client/: Cargo.toml
src/rust-client/data/: game_context.json  game_context_schema.json
src/rust-client/src/: main.rs  save.rs
src/server/: package.json  pnpm-lock.yaml  server.ts
src/server/services/: fileService.ts  openaiService.ts  storyService.ts
src/skills/: create-party.py  narrate.py  print.py
worldbuilding/: bestiary.md  character.md  essence-handbook.md  essences.md  unsorted-notes.md
