[package]
name = "storyteller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
async-std = "1.12.0"
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
async-recursion = "1.1.0"
serde_json = { version = "1.0.115", features = ["preserve_order", "indexmap"] }
chrono = "0.4.37"
schemars = "0.8.16"
valico = "4.0.0"
gpui = { git = "https://github.com/zed-industries/zed" }
smallvec = "1.13.2"
